p3/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
        - name: calculator-app
          image: facinetm14/calculator-app:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-app-service
spec:
  selector:
    app: calculator-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
