p3/infra/dev.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-rock-paper-scissors-app-service
  namespace: dev
spec:
  selector:
    app: rock-paper-scissors-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
